[gd_scene load_steps=10 format=3 uid="uid://c7vedk24djs8g"]

[ext_resource type="Script" uid="uid://njc60hior58s" path="res://scripts/entities/fuel_depot.gd" id="1_3pei0"]
[ext_resource type="PackedScene" uid="uid://b5xthmjrmtuuw" path="res://scenes/entities/effects/explosion.tscn" id="3_l26wd"]
[ext_resource type="Texture2D" uid="uid://d2g6yq2s3cpql" path="res://assets/sprites/Entities/Bonus/Fuel_depot_animated-Sheet.png" id="3_vu33p"]
[ext_resource type="AudioStream" uid="uid://cg1p116gmdyry" path="res://assets/sfx/explosion1.wav" id="4_lv36h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3pei0"]
atlas = ExtResource("3_vu33p")
region = Rect2(0, 0, 32, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu33p"]
atlas = ExtResource("3_vu33p")
region = Rect2(32, 0, 32, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_l26wd"]
atlas = ExtResource("3_vu33p")
region = Rect2(64, 0, 32, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_ydemp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pei0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu33p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l26wd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3pei0"]
radius = 15.0
height = 36.0

[node name="Fuel Depot" type="Area2D"]
collision_layer = 64
collision_mask = 130
script = ExtResource("1_3pei0")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.5882353)
position = Vector2(-3, 0)
scale = Vector2(1, 0.6)
skew = -0.17453292
texture = ExtResource("3_vu33p")
region_enabled = true
region_rect = Rect2(0, 0, 32, 42)

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ydemp")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_3pei0")

[node name="Explosion" parent="." instance=ExtResource("3_l26wd")]
visible = false

[node name="ExplodeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lv36h")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
[connection signal="finished" from="ExplodeSFX" to="." method="_on_explode_sfx_finished"]
